Fix z-index for tour container

--- a/assets/admin/tour/style.scss
+++ b/assets/admin/tour/style.scss
@@ -7,7 +7,7 @@
 	box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.25);
 
 	&:hover {
-		z-index: 9999999999;
+		z-index: 9999;
 	}
 }
 
